--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="_img/centro_hist.jpg" alt="First slide">
+                    <img class="first-slide" src="../_img/centro_hist.jpg" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption text-left">
                         </div>
